# rust-wasm-ts-extension-template

./: .gitignore  .prettierrc  Makefile  README.md  jest.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
esbuild/: esbuild.config.mjs  esbuild.config.ts  rust-watch.plugin.mjs  rust-watch.plugin.ts  tsconfig.esbuild.json  type-check.plugin.mjs  type-check.plugin.ts
manifests/: chrome.json  firefox.json
rust-wasm/: Cargo.toml
rust-wasm/src/: lib.rs
rust-wasm/src/chrome/: mod.rs  tabs.rs
rust-wasm/src/chrome/storage/: local.rs
src/assets/css/: popup.css
src/background/: main.ts
src/content/: main.ts
src/popup/: main.ts  popup.html
