[package]
name = "rust-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1.0.219"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["console"] }
reqwest = { version = "0.11", features = ["json"] }
wasm-bindgen-futures = "0.4.40"
js-sys = "0.3.67"
serde_json = "1.0.108"
web-time = "1.1.0"
console_error_panic_hook = "0.1.7"
